--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   <body>
     <button id="buttonA">load A</button> 
     <button id="buttonB">load B</button> 
+    <button id="buttonC">load C</button> 
     <section></section>
   </body>
   <script src="app.js"></script>
